Refactor Footer and Hero components to remove LinkedIn links and improve image handling

--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
-
-  <!DOCTYPE html>
+<!DOCTYPE html>
   <html lang="en">
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Online Portfolio with Next.js</title>
+      <title>Aranjit Archita - Portfolio</title>
     </head>
 
     <body>
@@ -12,4 +11,3 @@
       <script type="module" src="/src/main.tsx"></script>
     </body>
   </html>
-  
